# jpx

./: .gitignore  README.md  jpx.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: python-app.yml
